# monet_agent

./: .gitignore  .mcp.json  AGENTS.md  BRANCH-STATUS.md  CLAUDE.md  POSTDEPLOY_CHECK.md
agent/: .env.example  _split_helper.py  langgraph.json  pyproject.toml
agent/backtest/: factor_ic.py  persist.py
agent/docs/: DECISION-AND-STRATEGY.md  REVIEWER-TEST-PROD.md  agent_graph.md  agent_graph.mmd
agent/scripts/: create_crons.py  run_factor_loop_local.py  seed_factor_weights.py  seed_stage.py  seed_strategy.py  send_test_email.py
agent/skills/ai-cycle-refresh/: SKILL.md
agent/tests/: conftest.py  test_backend_wiring.py  test_bridge.py  test_global_gate.py  test_insights.py  test_integration_reviewer.py  test_namespace_binding.py  test_operation_success_classify.py  test_operation_success_extract.py  test_operation_success_probe.py  test_operation_success_registry.py  test_operation_success_schema.py  test_operation_success_tools.py  test_phase2_skills_wellformed.py  test_read_run_trace_filter.py  test_record_insight.py  test_review_agent_imports.py  test_review_db.py  test_review_memory.py  test_review_tools_boundary.py  test_review_trace.py  test_reviewer_model_config.py  test_run_cursor.py  test_skill_wellformed.py  test_strategy_conformance_checks_trades.py  test_strategy_conformance_classify.py  test_strategy_conformance_reconstruct.py  test_strategy_conformance_spec.py  test_strategy_conformance_tools.py  test_tool_fidelity_analysis.py  test_tool_fidelity_completion.py  test_tool_fidelity_phase.py  test_tool_fidelity_tools.py  test_tool_fidelity_watermark.py
(+128 files in other folders)
